@@ -136,10 +136,11 @@ class Configuration(Component, dict):
              "media_autoplay": True,
              "media_controls": False,
              "run_sync_server": False,
+             "run_web_server": False,
              "sync_server_port": 8512,
-             "sync_server_username": "",
-             "sync_server_password": "",
-             "webserver_port": 8513,
+             "web_server_port": 8513,
+             "remote_access_username": "",
+             "remote_access_password": "",
              "warned_about_learning_ahead": False,
              "shown_backlog_help": False,
              "shown_schedule_help": False,
