@@ -45,9 +45,6 @@ class PyQtConfiguration(Hook):
              "port_for_sync_as_client": 8512,
              "username_for_sync_as_client": "",
              "password_for_sync_as_client": "",
-             "port_for_sync_as_server": 8512,
-             "remote_access_username": "",
-             "remote_access_password": "",
              "started_add_edit_cards_n_times": 0,
              "started_browse_cards_n_times": 0,
              "showed_help_on_renaming_sets": False,
